--- a/tokeniser.ipynb
+++ b/tokeniser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "09dc2154",
    "metadata": {},
    "outputs": [
@@ -36,38 +36,6 @@
       "Requirement already satisfied: fsspec>=2023.5.0 in ./.venv/lib/python3.13/site-packages (from huggingface-hub>=0.16.4->miditok) (2025.10.0)\n",
       "Requirement already satisfied: typing-extensions>=3.7.4.3 in ./.venv/lib/python3.13/site-packages (from huggingface-hub>=0.16.4->miditok) (4.15.0)\n",
       "Requirement already satisfied: hf-xet<2.0.0,>=1.1.3 in ./.venv/lib/python3.13/site-packages (from huggingface-hub>=0.16.4->miditok) (1.2.0)\n",
-      "Requirement already satisfied: fsspec>=2023.5.0 in ./.venv/lib/python3.13/site-packages (from huggingface-hub>=0.16.4->miditok) (2025.10.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in ./.venv/lib/python3.13/site-packages (from huggingface-hub>=0.16.4->miditok) (4.15.0)\n",
-      "Requirement already satisfied: hf-xet<2.0.0,>=1.1.3 in ./.venv/lib/python3.13/site-packages (from huggingface-hub>=0.16.4->miditok) (1.2.0)\n",
-      "Requirement already satisfied: setuptools in ./.venv/lib/python3.13/site-packages (from torch) (80.9.0)\n",
-      "Requirement already satisfied: sympy>=1.13.3 in ./.venv/lib/python3.13/site-packages (from torch) (1.14.0)\n",
-      "Requirement already satisfied: networkx>=2.5.1 in ./.venv/lib/python3.13/site-packages (from torch) (3.6)\n",
-      "Requirement already satisfied: jinja2 in ./.venv/lib/python3.13/site-packages (from torch) (3.1.6)\n",
-      "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.8.93 in ./.venv/lib/python3.13/site-packages (from torch) (12.8.93)\n",
-      "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.8.90 in ./.venv/lib/python3.13/site-packages (from torch) (12.8.90)\n",
-      "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.8.90 in ./.venv/lib/python3.13/site-packages (from torch) (12.8.90)\n",
-      "Requirement already satisfied: nvidia-cudnn-cu12==9.10.2.21 in ./.venv/lib/python3.13/site-packages (from torch) (9.10.2.21)\n",
-      "Requirement already satisfied: nvidia-cublas-cu12==12.8.4.1 in ./.venv/lib/python3.13/site-packages (from torch) (12.8.4.1)\n",
-      "Requirement already satisfied: nvidia-cufft-cu12==11.3.3.83 in ./.venv/lib/python3.13/site-packages (from torch) (11.3.3.83)\n",
-      "Requirement already satisfied: nvidia-curand-cu12==10.3.9.90 in ./.venv/lib/python3.13/site-packages (from torch) (10.3.9.90)\n",
-      "Requirement already satisfied: nvidia-cusolver-cu12==11.7.3.90 in ./.venv/lib/python3.13/site-packages (from torch) (11.7.3.90)\n",
-      "Requirement already satisfied: nvidia-cusparse-cu12==12.5.8.93 in ./.venv/lib/python3.13/site-packages (from torch) (12.5.8.93)\n",
-      "Requirement already satisfied: nvidia-cusparselt-cu12==0.7.1 in ./.venv/lib/python3.13/site-packages (from torch) (0.7.1)\n",
-      "Requirement already satisfied: nvidia-nccl-cu12==2.27.5 in ./.venv/lib/python3.13/site-packages (from torch) (2.27.5)\n",
-      "Requirement already satisfied: nvidia-nvshmem-cu12==3.3.20 in ./.venv/lib/python3.13/site-packages (from torch) (3.3.20)\n",
-      "Requirement already satisfied: nvidia-nvtx-cu12==12.8.90 in ./.venv/lib/python3.13/site-packages (from torch) (12.8.90)\n",
-      "Requirement already satisfied: nvidia-nvjitlink-cu12==12.8.93 in ./.venv/lib/python3.13/site-packages (from torch) (12.8.93)\n",
-      "Requirement already satisfied: nvidia-cufile-cu12==1.13.1.3 in ./.venv/lib/python3.13/site-packages (from torch) (1.13.1.3)\n",
-      "Requirement already satisfied: triton==3.5.1 in ./.venv/lib/python3.13/site-packages (from torch) (3.5.1)\n",
-      "Requirement already satisfied: decorator>=4.3.2 in ./.venv/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets) (5.2.1)\n",
-      "Requirement already satisfied: ipython-pygments-lexers>=1.0.0 in ./.venv/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets) (1.1.1)\n",
-      "Requirement already satisfied: jedi>=0.18.1 in ./.venv/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets) (0.19.2)\n",
-      "Requirement already satisfied: matplotlib-inline>=0.1.5 in ./.venv/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets) (0.2.1)\n",
-      "Requirement already satisfied: pexpect>4.3 in ./.venv/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets) (4.9.0)\n",
-      "Requirement already satisfied: prompt_toolkit<3.1.0,>=3.0.41 in ./.venv/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets) (3.0.52)\n",
-      "Requirement already satisfied: pygments>=2.11.0 in ./.venv/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets) (2.19.2)\n",
-      "Requirement already satisfied: stack_data>=0.6.0 in ./.venv/lib/python3.13/site-packages (from ipython>=6.1.0->ipywidgets) (0.6.3)\n",
-      "Requirement already satisfied: wcwidth in ./.venv/lib/python3.13/site-packages (from prompt_toolkit<3.1.0,>=3.0.41->ipython>=6.1.0->ipywidgets) (0.2.14)\n",
       "Requirement already satisfied: setuptools in ./.venv/lib/python3.13/site-packages (from torch) (80.9.0)\n",
       "Requirement already satisfied: sympy>=1.13.3 in ./.venv/lib/python3.13/site-packages (from torch) (1.14.0)\n",
       "Requirement already satisfied: networkx>=2.5.1 in ./.venv/lib/python3.13/site-packages (from torch) (3.6)\n",
@@ -105,14 +73,6 @@
       "Requirement already satisfied: mpmath<1.4,>=1.1.0 in ./.venv/lib/python3.13/site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
       "Requirement already satisfied: pySmartDL in ./.venv/lib/python3.13/site-packages (from symusic>=0.5.0->miditok) (1.3.4)\n",
       "Requirement already satisfied: platformdirs in ./.venv/lib/python3.13/site-packages (from symusic>=0.5.0->miditok) (4.5.0)\n",
-      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in ./.venv/lib/python3.13/site-packages (from jedi>=0.18.1->ipython>=6.1.0->ipywidgets) (0.8.5)\n",
-      "Requirement already satisfied: ptyprocess>=0.5 in ./.venv/lib/python3.13/site-packages (from pexpect>4.3->ipython>=6.1.0->ipywidgets) (0.7.0)\n",
-      "Requirement already satisfied: executing>=1.2.0 in ./.venv/lib/python3.13/site-packages (from stack_data>=0.6.0->ipython>=6.1.0->ipywidgets) (2.2.1)\n",
-      "Requirement already satisfied: asttokens>=2.1.0 in ./.venv/lib/python3.13/site-packages (from stack_data>=0.6.0->ipython>=6.1.0->ipywidgets) (3.0.1)\n",
-      "Requirement already satisfied: pure-eval in ./.venv/lib/python3.13/site-packages (from stack_data>=0.6.0->ipython>=6.1.0->ipywidgets) (0.2.3)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in ./.venv/lib/python3.13/site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
-      "Requirement already satisfied: pySmartDL in ./.venv/lib/python3.13/site-packages (from symusic>=0.5.0->miditok) (1.3.4)\n",
-      "Requirement already satisfied: platformdirs in ./.venv/lib/python3.13/site-packages (from symusic>=0.5.0->miditok) (4.5.0)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in ./.venv/lib/python3.13/site-packages (from jinja2->torch) (3.0.3)\n",
       "Requirement already satisfied: contourpy>=1.0.1 in ./.venv/lib/python3.13/site-packages (from matplotlib->miditoolkit) (1.3.3)\n",
       "Requirement already satisfied: cycler>=0.10 in ./.venv/lib/python3.13/site-packages (from matplotlib->miditoolkit) (0.12.1)\n",
@@ -126,20 +86,6 @@
       "Requirement already satisfied: idna<4,>=2.5 in ./.venv/lib/python3.13/site-packages (from requests->transformers) (3.11)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in ./.venv/lib/python3.13/site-packages (from requests->transformers) (2.5.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in ./.venv/lib/python3.13/site-packages (from requests->transformers) (2025.11.12)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in ./.venv/lib/python3.13/site-packages (from jinja2->torch) (3.0.3)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in ./.venv/lib/python3.13/site-packages (from matplotlib->miditoolkit) (1.3.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in ./.venv/lib/python3.13/site-packages (from matplotlib->miditoolkit) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in ./.venv/lib/python3.13/site-packages (from matplotlib->miditoolkit) (4.61.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in ./.venv/lib/python3.13/site-packages (from matplotlib->miditoolkit) (1.4.9)\n",
-      "Requirement already satisfied: pillow>=8 in ./.venv/lib/python3.13/site-packages (from matplotlib->miditoolkit) (12.0.0)\n",
-      "Requirement already satisfied: pyparsing>=3 in ./.venv/lib/python3.13/site-packages (from matplotlib->miditoolkit) (3.2.5)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in ./.venv/lib/python3.13/site-packages (from matplotlib->miditoolkit) (2.9.0.post0)\n",
-      "Requirement already satisfied: six>=1.5 in ./.venv/lib/python3.13/site-packages (from python-dateutil>=2.7->matplotlib->miditoolkit) (1.17.0)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in ./.venv/lib/python3.13/site-packages (from requests->transformers) (3.4.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in ./.venv/lib/python3.13/site-packages (from requests->transformers) (3.11)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in ./.venv/lib/python3.13/site-packages (from requests->transformers) (2.5.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in ./.venv/lib/python3.13/site-packages (from requests->transformers) (2025.11.12)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -150,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "7c9cd9c0",
    "metadata": {},
    "outputs": [],
@@ -177,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "f10545b5",
    "metadata": {},
    "outputs": [
@@ -213,7 +159,7 @@
        ")"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "6fbb49cc",
    "metadata": {},
    "outputs": [],
@@ -277,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5cd69c66",
    "metadata": {},
    "outputs": [
@@ -286,7 +232,8 @@
      "output_type": "stream",
      "text": [
       "Dataset size: 5570 sequences\n",
-      "Vocabulary size: 284\n"
+      "Vocabulary size: 284\n",
+      "Total MIDI files loaded: 5358\n"
      ]
     }
    ],
@@ -313,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "eb6563ec",
    "metadata": {},
    "outputs": [],
@@ -361,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "d2225d5e",
    "metadata": {},
    "outputs": [
@@ -376,25 +323,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 | loss: 1.2154\n",
-      "Epoch 1 | loss: 1.5723\n",
-      "Epoch 1 | loss: 1.5723\n",
-      "Epoch 2 | loss: 0.3962\n",
-      "Epoch 2 | loss: 0.3962\n",
-      "Epoch 3 | loss: 1.6993\n",
-      "Epoch 3 | loss: 1.6993\n",
-      "Epoch 4 | loss: 1.2748\n",
-      "Epoch 4 | loss: 1.2748\n",
-      "Epoch 5 | loss: 0.5922\n",
-      "Epoch 5 | loss: 0.5922\n",
-      "Epoch 6 | loss: 0.3398\n",
-      "Epoch 6 | loss: 0.3398\n",
-      "Epoch 7 | loss: 0.3527\n",
-      "Epoch 7 | loss: 0.3527\n",
-      "Epoch 8 | loss: 0.6102\n",
-      "Epoch 8 | loss: 0.6102\n",
-      "Epoch 9 | loss: 0.3636\n",
-      "Epoch 9 | loss: 0.3636\n"
+      "Epoch 0 | loss: 1.6554\n",
+      "Epoch 1 | loss: 0.8141\n",
+      "Epoch 2 | loss: 0.5811\n",
+      "Epoch 3 | loss: 0.5679\n",
+      "Epoch 4 | loss: 0.4448\n",
+      "Epoch 5 | loss: 0.6741\n",
+      "Epoch 6 | loss: 0.4567\n",
+      "Epoch 7 | loss: 0.5190\n",
+      "Epoch 8 | loss: 0.3950\n",
+      "Epoch 9 | loss: 0.3915\n",
+      "Epoch 10 | loss: 0.2958\n",
+      "Epoch 11 | loss: 0.4078\n",
+      "Epoch 12 | loss: 0.2335\n",
+      "Epoch 13 | loss: 0.2491\n",
+      "Epoch 14 | loss: 0.3006\n",
+      "Epoch 15 | loss: 0.2742\n",
+      "Epoch 16 | loss: 0.2377\n",
+      "Epoch 17 | loss: 0.6002\n",
+      "Epoch 18 | loss: 0.2483\n",
+      "Epoch 19 | loss: 0.1587\n",
+      "Epoch 20 | loss: 0.2051\n",
+      "Epoch 21 | loss: 1.1844\n",
+      "Epoch 22 | loss: 0.2513\n",
+      "Epoch 23 | loss: 0.1507\n",
+      "Epoch 24 | loss: 0.1040\n",
+      "Epoch 25 | loss: 0.1805\n",
+      "Epoch 26 | loss: 0.1468\n",
+      "Epoch 27 | loss: 0.1310\n",
+      "Epoch 28 | loss: 0.0850\n",
+      "Epoch 29 | loss: 0.0775\n",
+      "Epoch 30 | loss: 0.3845\n",
+      "Epoch 31 | loss: 0.0877\n",
+      "Epoch 32 | loss: 0.0862\n",
+      "Epoch 33 | loss: 0.1418\n",
+      "Epoch 34 | loss: 0.1149\n",
+      "Epoch 35 | loss: 0.0825\n",
+      "Epoch 36 | loss: 0.1063\n",
+      "Epoch 37 | loss: 0.0672\n",
+      "Epoch 38 | loss: 0.0630\n",
+      "Epoch 39 | loss: 0.0642\n",
+      "Epoch 40 | loss: 0.0431\n",
+      "Epoch 41 | loss: 0.0560\n",
+      "Epoch 42 | loss: 0.0781\n",
+      "Epoch 43 | loss: 0.0412\n",
+      "Epoch 44 | loss: 0.0513\n",
+      "Epoch 45 | loss: 0.0638\n",
+      "Epoch 46 | loss: 0.0466\n",
+      "Epoch 47 | loss: 0.0585\n",
+      "Epoch 48 | loss: 0.0458\n",
+      "Epoch 49 | loss: 0.0438\n"
      ]
     }
    ],
@@ -421,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "9b3e3337",
    "metadata": {},
    "outputs": [
@@ -437,7 +415,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_19100/4238178107.py:15: UserWarning: miditok: The `save_params` method had been renamed `save`. It is now depreciated and will be removed in future updates.\n",
+      "/tmp/ipykernel_271838/4238178107.py:15: UserWarning: miditok: The `save_params` method had been renamed `save`. It is now depreciated and will be removed in future updates.\n",
       "  tokenizer.save_params(Path(\"tokenizer_config.json\"))\n"
      ]
     }
@@ -463,17 +441,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2f295ea0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model loaded from trained_midi_model.pt\n",
+      "Trained for 50 epochs\n",
+      "Vocabulary size: 284\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the saved model (run this instead of training if you want to reload)\n",
     "import torch\n",
     "from transformers import GPT2Config, GPT2LMHeadModel\n",
     "\n",
     "model_save_path = \"trained_midi_model.pt\"\n",
-    "checkpoint = torch.load(model_save_path)\n",
+    "checkpoint = torch.load(model_save_path,  weights_only=False)\n",
     "\n",
     "# Recreate the model with saved config\n",
     "config = checkpoint['config']\n",
@@ -497,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "85553cf1",
    "metadata": {},
    "outputs": [],
@@ -533,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "dcb88eef",
    "metadata": {},
    "outputs": [
@@ -542,8 +530,6 @@
      "output_type": "stream",
      "text": [
       "Using prompt: ['Bar_None', 'Position_0', 'Pitch_38', 'Velocity_87', 'Duration_2.0.8', 'Pitch_50', 'Velocity_87', 'Duration_2.0.8', 'Pitch_72', 'Velocity_95', 'Duration_1.0.8', 'Position_8', 'Pitch_79', 'Velocity_95', 'Duration_0.4.8', 'Position_12', 'Pitch_74', 'Velocity_95', 'Duration_0.4.8', 'Position_16']\n",
-      "Generated MIDI saved to output_generated.mid\n",
-      "Duration: 1.00 seconds (approximate)\n",
       "Generated MIDI saved to output_generated.mid\n",
       "Duration: 1.00 seconds (approximate)\n"
      ]
@@ -582,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8572e77e",
    "metadata": {},
    "outputs": [
@@ -590,11 +576,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using prompt from sequence 2695, starting at position 3\n",
+      "Using prompt from sequence 4732, starting at position 11\n",
       "Prompt length: 200 tokens\n",
       "Generated MIDI saved to output_generated_v2.mid\n",
       "Duration: 14.00 seconds\n",
-      "Notes created: 55\n"
+      "Notes created: 52\n"
      ]
     }
    ],
@@ -630,7 +616,7 @@
     "token_strings = [tokenizer[token_id] for token_id in generated_tokens]\n",
     "tok_seq = TokSequence(ids=generated_tokens, tokens=token_strings)\n",
     "generated_midi = tokenizer.decode([tok_seq])\n",
-    "generated_midi.dump_midi(\"output_generated_v6.mid\")\n",
+    "generated_midi.dump_midi(\"output_generated_v9.mid\")\n",
     "\n",
     "print(f\"Generated MIDI saved to output_generated_v2.mid\")\n",
     "print(f\"Duration: {generated_midi.end() / generated_midi.ticks_per_quarter / 2:.2f} seconds\")\n",
